# libappling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.js  package-lock.json  package.json
.github/workflows/: prebuild.yml  test.yml
example/: CMakeLists.txt  README.md
example/app/: CMakeLists.txt  main.c
example/app/darwin-arm64/: CMakeLists.txt
example/app/darwin-arm64/Example.app/Contents/: Info.plist
example/app/darwin-x64/: CMakeLists.txt
example/app/linux-arm64/: CMakeLists.txt
example/app/linux-arm64/Example.AppDir/resources/app/: platform.tar
example/app/linux-x64/Example.AppDir/resources/app/: platform.tar
example/app/win32-arm64/Example/resources/app/: platform.tar
example/app/win32-x64/: CMakeLists.txt
example/app/win32-x64/Example/resources/app/: platform.tar
include/: appling.h  holepunch.h
include/appling/: arch.h  constants.h  darwin.h  linux.h  mac.h  os.h  posix.h  version.h  win.h  win32.h
include/holepunch/: arch.h  constants.h  linux.h  mac.h  os.h  posix.h  win.h
src/: bootstrap.c  bootstrap.js  builtins.json  entry.c  extract.c  launch.c  lock.c  main.c  parse.c  paths.c  preflight.c  ready.c  resolve.c  unlock.c
src/darwin/: lock.h  open.m
src/linux/: lock.h  open.c
src/win32/: lock.h  open.c
test/: CMakeLists.txt  bootstrap-dangling-tmp.c  bootstrap-existing-corestores.c  bootstrap-existing-platform.c  bootstrap-newer-platform.c  bootstrap-no-platform-next.c  bootstrap-no-platform-v1.c  bootstrap-no-platform-v2.c  bootstrap-no-platform.c  bootstrap-older-platform.c  extract.c  launch-data.c  launch-known-app.c  launch-known-link.c  launch-link-data.c  launch-link-different-key.c  launch-link.c  launch-unknown-app.c  launch-unknown-link.c  launch.c  lock-non-existing.c  lock.c  parse-hex.c  parse-invalid.c  parse-named.c  parse-z32.c  parse.c  paths.c  preflight.c  ready.c  resolve-both-minimum-length-mismatch.c  resolve-both-minimum-length.c  resolve-both.c  resolve-current-minimum-length-mismatch.c  resolve-current-minimum-length.c  resolve-current.c  resolve-next.c  resolve.c
test/fixtures/: .gitignore  CMakeLists.txt  Makefile  app.h  applings.h  applings.js  checkouts.js  runtime.c
test/fixtures/app/linux-arm64/Example.AppDir/resources/app/: platform.tar
test/fixtures/app/linux-x64/Example.AppDir/resources/app/: platform.tar
test/fixtures/app/win32-arm64/Example/resources/app/: platform.tar
test/fixtures/app/win32-x64/Example.AppDir/resources/app/: platform.tar
test/fixtures/app/win32-x64/Example/resources/app/: checkout  platform.tar
test/fixtures/bootstrap/existing-corestores/: .gitignore
test/fixtures/extract/: archive.tar
test/fixtures/platform/: .gitignore  current
test/fixtures/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0/: checkout
test/fixtures/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0/by-arch/darwin-arm64/lib/: launch.dylib  pear.dylib
test/fixtures/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/0/by-arch/darwin-x64/lib/: launch.dylib  pear.dylib
test/fixtures/platform/by-dkey/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa/1/: checkout
test/fixtures/platform/stable/swap-0/: checkout
test/fixtures/resolve/both/: current
test/fixtures/resolve/next/: next
